# Ircbot

./: CMakeLists.txt  LICENSE.md  irc_bot  irc_bot.pro  ircmessage.cpp  ircmessage.h  main.cpp  readme.md  start.sh
libirc/: CMakeLists.txt  ircbot.cpp  ircbot.h  ircmessage.cpp  ircmessage.h  miaowbot.cpp  miaowbot.h
